--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,36 @@
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    height: 100vh;
+}
 #title-h1{
     text-align: center;
+}
+
+#left-container{
+    width: 30%;
+    background-color: #f0f0f0;
+    padding: 20px;
+}
+
+#right-container{
+    width: 70%;
+}
+
+#navbar{
+    position: fixed;
+    top: 0;
+    background-color: #333;
+    color: #fff;
+    width: 70%;
+    display:flex;
+    justify-content: space-around;
+    padding-left:10px;
+    padding-right:10px;
+}
+
+#right-content{
+    padding-left:20px;
+    padding-top:50px;
 }
