--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,13 @@ body{
     padding: 0;
     display: flex;
     height: 100vh;
+    font-family: "Roboto", sans-serif;
 }
+
+li::marker{
+    font-size: 1.5em;
+}
+
 #title-h1{
     text-align: center;
     font-size: 40px;
@@ -13,11 +19,13 @@ body{
 #left-container{
     width: 30%;
     background-color: #f0f0f0;
-
+    position: fixed;
+    height:100%;
 }
 
 #right-container{
     width: 70%;
+    margin-left:30%;
 }
 
 #navbar{
@@ -33,8 +41,8 @@ body{
 }
 
 #right-content{
-    padding-left:20px;
-    padding-top:50px;
+    padding-top:30px;
+    margin-top:20px;
 }
 
 #profile-pic-container{
@@ -44,7 +52,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(223, 228, 234);
+    background-color: rgb(224, 224, 224);
 }
 
 #profile-pic{
@@ -69,7 +77,7 @@ body{
 }
 
 .info-line i {
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .info-line a {
@@ -79,3 +87,53 @@ body{
 .info-line a:hover {
     text-decoration: underline;
 }
+
+.content-container{
+    background-color: rgb(224, 224, 224);
+    border-radius:5px;
+    margin:15px;
+    padding:20px;
+}
+
+.content-heading{
+    margin:0px;
+}
+
+.content-p{
+    line-height: 1.3;
+}
+
+.project-container{
+    background-color:rgb(231, 231, 231);
+    border-radius:5px;
+    padding-left:15px;
+    padding-right:15px;
+    padding-bottom:10px;
+    margin-top:15px;
+}
+
+.project-header{
+    display:flex;
+    justify-content: space-between;
+    padding:0px;
+    margin-bottom:-10px;
+}
+
+.project-description{
+    margin:3px;
+}
+
+.project-image{
+    margin-top:10px;
+    max-width: 100%;
+    border-radius:10px;
+}
+
+.bullet-points {
+    padding-left: 32px;
+}
+
+.bullet-points li {
+    text-indent: -32px;
+    margin-bottom:7px;
+} 
