--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@ li::marker{
     background-color: #f0f0f0;
     position: fixed;
     height:100%;
+    /* overflow: auto; */
 }
 
 #right-container{
@@ -137,3 +138,23 @@ li::marker{
     text-indent: -32px;
     margin-bottom:7px;
 } 
+
+.skills-container{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.skill{
+    padding:8px;
+    border:1px solid black;
+    background-color: rgb(246, 250, 255);
+    border-radius: 12px;
+    margin: 10px 20px 10px 0px;
+    min-width: 50px;
+    text-align: center;
+}
+
+.navbar{
+    cursor:pointer;
+}
