--- a/css/index.css
+++ b/css/index.css
@@ -128,8 +128,16 @@ li::marker{
 .project-image{
     margin-top:10px;
     max-width: 100%;
+    max-height: 450px;
     border-radius:10px;
+    margin-top:8px;
 }
+
+.image-container {
+    display: flex;
+    justify-content: center;  
+    align-items: center;     
+  }
 
 .bullet-points {
     padding-left: 32px;
