--- a/css/index.css
+++ b/css/index.css
@@ -13,20 +13,24 @@ li::marker{
 #title-h1{
     text-align: center;
     font-size: 40px;
-    margin:15px;
+    margin: 15px 0 0 0;
+    padding:0;
 }
 
 #left-container{
-    width: 30%;
-    background-color: #faf8ff;
+    width: 25%;
     position: fixed;
     height:100%;
-    /* overflow: auto; */
+    background: linear-gradient(to bottom, #b2b5cc, #ffffff);
+    box-shadow: 5px 0 8px rgba(0, 0, 0, 0.15);
+
+    /* background: linear-gradient(180deg, #cccbdb 0%, #ffffff 100%); */
 }
 
 #right-container{
-    width: 70%;
-    margin-left:30%;
+    width: 75%;
+    margin-left:25%;
+    background-color: #fafbff;
 }
 
 #navbar{
@@ -34,7 +38,7 @@ li::marker{
     top: 0;
     background-color: #333;
     color: #fff;
-    width: 70%;
+    width: 75%;
     display:flex;
     justify-content: space-around;
     padding-left:10px;
@@ -54,7 +58,31 @@ li::marker{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #d5d2e4;
+    background: 
+        linear-gradient(180deg, #4e5f8f 0%, #d7d5e2 100%),
+        repeating-linear-gradient(
+            60deg,
+            rgba(255, 255, 255, 0.12),
+            rgba(255, 255, 255, 0.12) 2px,
+            transparent 2px,
+            transparent 60px
+        ),
+        repeating-linear-gradient(
+            120deg,
+            rgba(255, 255, 255, 0.12),
+            rgba(255, 255, 255, 0.12) 2px,
+            transparent 2px,
+            transparent 60px
+        ),
+        repeating-linear-gradient(
+            0deg,
+            rgba(255, 255, 255, 0.12),
+            rgba(255, 255, 255, 0.12) 2px,
+            transparent 2px,
+            transparent 60px
+        );
+
+    background-blend-mode: overlay;
 }
 
 #profile-pic{
@@ -67,7 +95,7 @@ li::marker{
     justify-content: center;
     display:flex;
     flex-direction: column;
-    padding-left:3%;
+    padding-left:14%;
     padding-top:20px;
     padding-bottom:20px;
 }
@@ -91,14 +119,17 @@ li::marker{
 }
 
 .content-container{
-    background-color: rgb(224, 224, 224);
-    border-radius:5px;
-    margin:15px;
-    padding:20px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius:10px;
+    margin:20px 25px;
+    padding:24px;
 }
 
 .content-heading{
-    margin:0px;
+    margin-top:0px;
+    padding-bottom: 4px;
+    border-bottom: 2px solid #ccc;
 }
 
 .content-p{
@@ -106,7 +137,7 @@ li::marker{
 }
 
 .project-container{
-    background-color:rgb(231, 231, 231);
+    background-color:rgb(245, 245, 245);
     border-radius:5px;
     padding-left:15px;
     padding-right:15px;
@@ -144,7 +175,6 @@ li::marker{
 }
 
 .bullet-points li {
-    text-indent: -32px;
     margin-bottom:7px;
 } 
 
@@ -152,16 +182,7 @@ li::marker{
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
-}
-
-.skill{
-    padding:8px;
-    border:1px solid black;
-    background-color: rgb(246, 250, 255);
-    border-radius: 12px;
-    margin: 10px 20px 10px 0px;
-    min-width: 50px;
-    text-align: center;
+    margin-bottom:15px;
 }
 
 .navbar-item{
@@ -178,9 +199,60 @@ li::marker{
     border: 1px solid #ddd;
     padding: 20px;
     border-radius: 8px;
-  }
+}
 
-  .project-container:hover {
+.project-container:hover {
     transform: translateY(-5px);
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  }
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+}
+
+#title-bar{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    padding-left: 10%;
+    padding-right: 10%;
+    box-sizing: border-box;
+}
+
+.skill-badge {
+  display: inline-flex;
+  align-items: center;
+  background-color: #020711;
+  color: white;
+  padding: 12px 15px;
+  border-radius: 3px;
+  font-size: 0.875rem;
+  font-weight: 500;
+  text-decoration: none;
+  transition: transform 0.2s, background-color 0.2s;
+  font-size:15px;
+  white-space: nowrap;
+}
+
+.skill-badge:hover {
+  transform: translateY(-2px);
+  background-color: rgb(71, 71, 71);
+}
+
+.badges-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.skill-titles {
+    width:100%
+}
+
+i{
+    margin-right:10px;
+}
+
+svg{
+    width: 18px;
+    height:18px;
+    margin-right:10px;
+    fill: #FFFFFF;
+}
